# jpop-lyrics-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  fabfile.py  generate_word_cloud.py  get-lyrics.py  get_lyrics.py  jpop-lyrics.db  morphological-analysis.py  morphological_analysis.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  word-cloud-feed.txt
.github/workflows/: ci.yaml  lint.yaml
examples/: word-cloud-feed.txt
jpop_lyrics_analysis/: __main__.py  config.py  databases.py  entry.py  models.py  scrapers.py  splitters.py  utils.py
tests/: test_scrapers.py  test_splitters.py
tests/data/: utanet_curr_page.html  utanet_next_page.html  utanet_parse_one.html
