[project]
name = "jpop-lyrics-analysis"
version = "0.0.1"
description = "Experiments for analzing jpop lyrics"
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "beautifulsoup4>=4.11.1",
    "matplotlib>=3.5.2",
    "mecab-python3>=1.0.5",
    "numpy>=1.23.0",
    "requests>=2.28.1",
    "urllib3",
    "wordcloud",
    "pillow",
    "lxml",
    "click>=8.1.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
jla = "jpop_lyrics_analysis.entry:main"

[project.optional-dependencies]
[tool.pdm]
allow_prereleases = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = [
    "black",
    "flake8",
    "autoflake",
    "pre-commit",
    "ipython",
    "isort",
    "pytest",
    "pytest-cov",
    "requests-mock>=1.9.3",
]
[tool.pdm.scripts]
test = "pytest --verbose -s -p no:warnings --cov-report term-missing --cov 'jpop_lyrics_analysis' tests"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
