[global]
quiet = 1

[metadata]
name = jpop-lyrics-analysis
description = Experiments for analzing jpop lyrics
author = Yifan Wu
author-email = tyivanwu@gmail.com
version = 0.0.1

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =

[options.entry_points]
console_scripts =
    jla=jpop_lyrics_analysis.entry:main
    jpop-lyrics-analysis=jpop_lyrics_analysis.entry:main